# ai_project

./: .gitignore  README-Windows-Web.txt  README.md  check-storyboard-windows-env.bat  check-windows-remote-access.command  copy-windows-diagnostics-summary.command  copy-windows-diagnostics.command  copy-windows-runtime-log.command  index.html  package-lock.json  package.json  release-manifest.json  stable_char_ipadapter_workflow.json  start-storyboard-mac.command  start-storyboard-web.bat  start-storyboard-windows-debug.bat  start-storyboard-windows.bat  storyboard_sd15_experiment.json  storyboard_sd15_workflow.json  storyboard_sdxl_workflow.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  update-storyboard-windows.bat  watch-windows-runtime-log.command  新建文本文档.txt
dist.new/: index.html
dist.new/assets/: animaticExport-lgZRpdZX.js  index-B4-qwo4q.css  index-CEn9oraM.js  index.es-DZghDgLZ.js  storyboardPdf-1gioaVsY.js
docs/: Architecture-v1.md  PRD-v1.md  asset-workflows-20260303.md  stable-storyboard-workflow-20260319.md  storyboard-workflows-20260304.md
examples/river-continuity-test/: river_continuity_test_shot_script.json
examples/river-dialogue-5s/: README.md  river_dialogue_5s_project_backup.json  river_dialogue_5s_shot_script.json
scripts/: build-windows-web-release.mjs  check-threeview-stability-guards.mjs  cleanup-character-artifacts.mjs  windows-web-server.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: App.tsx  AppErrorBoundary.tsx
src/modules/ui/: toastStore.tsx  (+1 more)
src/styles/: global.css
(+34 files in other folders)
